@@ -1,6 +1,11 @@
 Changes from jTDS 1.3.1
 =======================
 
+11/14/2014 - Holger Rehn
+ o Bugfix: The SQL parser's statement cache could have returned inappropriate
+   results if multiple connections use different settings for "prepareSQL" or
+   "sendStringParametersAsUnicode".
+
 11/13/2014 - Holger Rehn
  o Bugfix: The size of the in-memory packet buffer wasn't monitored correctly,
    potentially causing the driver to occupy an unpredictable (large or small)
